<resources>
    <string name="app_name">kiaScreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main_model_comparison_desc_txt">원하시는 기아의 차량을 국내 판매 중인 차량과 빠르게 비교하실 수 있습니다 \n (최대 3개까지 선택 가능)</string>
    <string name="main_model_comparison_reset_txt">선택 초기화</string>
    <string name="main_model_comparison_extra_txt">엔진 및 트림은 기본 가격 기준으로 선택되고 각 항목에서 변경 가능합니다</string>

    <string name="model_comparison_desc_title_1">성능 / 제원</string>
    <string name="model_comparison_desc_title_2">경제성 / 환경</string>
    <string name="model_comparison_desc_title_3">충돌 / 안전</string>
    <string name="model_comparison_desc_title_4">등록비</string>

    <string name="notice_1">∙ 비교 차량의 총 구입 비용은 개별소비세 3.5%가 적용된 가격입니다. (면세 차량 제외)</string>
    <string name="notice_2">∙ 자동차 이미지는 참조용으로 구입 시점과 제조사 수시 변경으로 판매차량과 다를 수 있으니 해당 모델 판매점에 확인바랍니다.</string>
    <string name="notice_3">∙ 상기 내용은 고객님의 차량 구입 의사결정에 도움을 드리고자 제공하는 참고용 서비스로 법적 효력이 없으며, 실제 구입 시 차이가 있을 수 있습니다.</string>
    <string name="notice_4">∙ 상기 차량별 비교 정보는 각 제조업체의 카탈로그 및 홈페이지에 공개된 자료를 바탕으로 작성 되었습니다.</string>
    <string name="notice_5">∙ 수시로 최신정보를 갱신하고 있으나 간혹 업데이트가 늦어지는 경우가 발생할 수 있습니다.</string>

    <string name="bottom_menu_1">판매 네트워크</string>
    <string name="bottom_menu_2">견적 내기</string>
    <string name="bottom_menu_3">구매 상담 신청</string>
    <string name="bottom_menu_4">시승 신청</string>
    <string name="bottom_menu_5">기아렌터카</string>

    <string name="personal_info_manuel">개인정보 처리방침</string>
    <string name="privacy_center">프라이버시 센터</string>
    <string name="trial">이용약관</string>
    <string name="cyber_audit">윤리경영 사이버감사실</string>
    <string name="e_annoucement">전자 공고</string>
    <string name="site_map">사이트맵</string>


    <string name="setting_push_text">PUSH 알림</string>
    <string name="setting_push_content">이벤트, 행사에 대한 알림을 받습니다</string>

    <string name="setting_auto_login_text">자동 로그인</string>
    <string name="setting_auto_login_content">자동로그인을 사용할 경우 타인에게 고객의 정보가\n노출될 위험이 있습니다</string>

    <string name="setting_cur_version_text">현재 버전</string>
    <string name="setting_cur_version_content">현재 %1$s 버전이 최신버전입니다</string>

    <string name="setting_customer_support_title">고객지원센터</string>
    <string name="setting_customer_support_desc_call">(발신자 부담)</string>
    <string name="setting_customer_support_number">1234-1234</string>
    <string name="setting_customer_support_desc_time">월 - 금 09:00 ~ 18:00 / 토, 일요일, 공휴일은 휴무</string>

    <string name="law_title">이용 약관</string>
    <string name="law_pop_title">이용약관 동의</string>
    <string name="privacy_title">개인정보처리방침</string>
    <string name="privacy_pop_title">개인정보 위탁에 관한 동의</string>
    <string name="opensrc_license_title">오픈소스 라이센스</string>


    <string name="text_confirm">확인</string>
    <string name="term_agreement_title">환영합니다!\n아래 약관에 동의하시면\n시작됩니다</string>
    <string name="text_agree_all">전체동의</string>
    <string name="cd_hi">약관에 동의해주세요</string>
    <string name="text_agree_location">개인 정보 이용 동의(필수)</string>
    <string name="text_agree_marketing_push">마케팅 정보 동의 (선택)</string>
    <string name="text_start">시작하기</string>
    <string name="text_term">이용약관</string>

    <string name="text_location_term">위치기반서비스 이용약관</string>
    <string name="text_service_term_title_1">임의의 서비스 이용약관</string>
    <string name="text_service_term_title_2">임의의 서비스  이용약관</string>

    <string name="text_check_permissions_title">고객님의 편리한 \n이용을 위해 아래 \n권한의 허용이 필요합니다</string>
    <string name="text_permission_noti_title">알림(선택)</string>
    <string name="text_permission_noti_description">푸시 알림 수신</string>

    <string name="text_permission_overall_description">위 접근건한은 고객님께 더 나은 서비스를 제공하기 위해 사용됩니다. 허용에 동의하지 않으셔도 이용하실 수 있습니</string>

    <string name="text_permission_storage_title">저장 공간</string>
    <string name="text_permission_storage_description">저장 공간 접근 허용</string>

    <string name="text_service_term_1">제 1조 (목적)\n 약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다.\n  약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다. \n  약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다. \n  약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다.</string>

    <string name="text_service_term_2">제 2조 (용어의 정의)\n 약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다.\n  약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다. \n  약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다. \n  약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다.</string>

    <string name="text_service_term_3">제 3조 (용어의 정의)\n 약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다.\n  약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다. \n  약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다. \n  약관 관련 내용입니다. 약관 관련 내용입니다. 약관 관련 내용입니다.</string>

    <!-- 보험료 안내 문구 -->
    <string name="text_insurance_title">보험료 산출 안내</string>
    <string name="text_insurance_guide_1">(유의 사항)보험료 산출은 가입자의 운전경력 및 손해율 그리고 가입시기, 가입하실 보험사에 따라 달라질 수 있음을 알려드립니다.</string>
    <string name="text_insurance_guide_2">각 모델의 차량가격으로 보험료를 산출하지만, 업데이트 시점에 따라 가격이 정확하지 않을 수 있습니다.</string>
    <string name="text_insurance_guide_3">보험료 산출은 다음과 같은 조건에서 산출하였습니다.</string>
    <string name="text_insurance_guide_4">자동차 용도 - 출퇴근 및 가정용, 신규 가입 조건</string>
    <string name="text_insurance_guide_5">물적 사고 기준액 - 50만원</string>
    <string name="text_insurance_guide_6">운전자 - 1인(32~37세), 연령한정 - 30세 이상 한정 특약</string>
    <string name="text_insurance_guide_7">대인1 - 무한, 대인2 - 무한, 대물 - 2원, 자기신체 - 5천만원</string>
    <string name="text_insurance_guide_8">무보험 - 가입, 자기차량손해 - 부담금 있음, 긴급출동 가입</string>

    <!-- 유류비 안내 문구 -->
    <string name="text_fuel_guide_title">유류비 안내</string>
    <string name="text_fuel_guide_title_2">휘발유, 경유, LPG, 수소 유류비 계산</string>
    <string name="text_fuel_guide_title_3">전기차 전기비용 계산</string>
    <string name="text_fuel_guide_1">유류비 산식 = 설정한 운행 기간의 총 주행거리x해당 연료 주유소 전국 평균값/선택한 모델 복합연비</string>
    <string name="text_fuel_guide_2">해당 연료 유류비 주유소 전국 평균값 인용</string>
    <string name="text_fuel_guide_3">- 휘발유, 경유, LPG : 한국석유공사</string>
    <string name="text_fuel_guide_4">- 수소 : 환경부 무공해차 통합누리집</string>
    <string name="text_fuel_guide_5">대부분 충전요금(약 95%)+운영비용(약 4~6%)</string>
    <string name="text_fuel_guide_6">충전요금 산식은 유류비 산식과 같지만, 복합연비 대신 선택한 모델의 복합전비로 계산</string>
    <string name="text_fuel_guide_7">운영비용은 여러 형태 충전소 방문시를 고려한 보정 비용이며, 대략 충전요금의 4~6% 적용</string>
    <string name="text_fuel_guide_8">운영비용은 선택한 모델의 항속거리(1회 충전시 주행거리)와 전비 효율에 영향을 받는데 항속거리가 클수록 전비가 높을수록 충전소 방문이 적게 되므로 낮게 산출됨</string>
    <string name="text_fuel_guide_9">충전요금 인용 : 한국전력공사</string>
    <string name="text_fuel_guide_10">충전요금은 공용충전기와 가정용 충전기를 동시 사용하는 것으로 하며 중간부하시간대 전기 요금을 적용함</string>

    <!-- 안전 평가 문구  -->
    <string name="text_safety_title">신차 안전도 평가 안내</string>
    <string name="text_safety_content_1">본 신차안전도 평가결과는 국토교통부 주관 안전도 평가 후 발표된 자료입니다.(교통안전공단 자세한 내용 www.kncap.org 참조)</string>
    <string name="text_safety_content_2">안전도 종합등급 안전도평가에서 실시하고 있는 정면충돌, 측면충돌, 보행자 등 22개 항목의 평가 결과를 종합하여 평가 대상 차량의 안전도를 등급(1~5등급)과 점수(100점 만점)로 소비자들에게 제공합니다.</string>
    <string name="text_safety_content_3">1등급일수록 가장 안전한 차량입니다.</string>
    <string name="text_safety_content_4">매년 자동차 판매수가 많거나 판매가 급증 추세인 차 그리고 과거 평가를 하지 않은 모델 중에서 평가를 실시하며, 평가에 사용된 차량의 에어백 등의 안전장비는 실제 구입하시는 차량과 다를 수 있으므로 확인 하시길 바랍니다.</string>

    <!-- 공채 문구 -->
    <string name="text_fund_title_1">공채 안내</string>
    <string name="text_fund_table3_content_1">서울,부산,대구(달성군제외),창원 :\n200만원까지\n그 외 지역 : 150만원까지\n인천 : 전액(2023년 12월 31일까지)</string>
    <string name="text_fund_table3_content_2">서울,부산,대구(달성군제외) :\n250만원까지\n강원, 충남, 충북 : 150만원까지\n그 외 지역 : 전액)</string>
    <string name="text_fund_table3_content_3">서울,인천,부산,대구(달성군제외) :\n250만원까지\n충남 : 150만원까지\n그 외 지역 : 전액</string>
    <string name="text_fund_content_1">자동차 등록 시 매입 해야 하는 지방채로 지자체별 채권의 종류, 매입액 등이 상이</string>
    <string name="text_fund_content_2">채권은 차량 등록지에 따라 도시철도 채권 이나 지역개발채권으로 구분 매입</string>
    <string name="text_fund_content_3">채권 매입금액은 등록할 차량의 차종과 해당 지역 공채매입 요율에 의해서 채권 매입액 산출</string>
    <string name="text_fund_content_4">자동차 구입 초기 비용 부담을 덜기 위해 채권 매입 후 금융사에 일정 할인율 적용해서 즉시 매도하는 것으로, 차량등록사업소 내 은행 출장소에서 할인비용만 지급하여 처리 가능</string>
    <string name="text_fund_content_5">할인비용=공채 매입금액 x 할인율(채권별로 매일 변동되며 등록지역 차량등록사업소에서 확인 가능)</string>

    <!-- 보험 등급 문구 -->
    <string name="text_insurance_grade_title_1">자동차 보험 등급 안내</string>
    <string name="text_insurance_grade_content_1">자동차 모델등급은 보험개발원내 자동차기술연구소에서 충돌 Test와 손상성·수리성 평가를 통해 등급을 결정합니다.</string>
    <string name="text_insurance_grade_content_2">손상성·수리성 평가등급은 1등급~26등급(26단계)으로 구분되며, 높을 수록(26등급에\n가까울수록) 차량의 저속 충돌시 손상성·수리성이 손상성·수리성이 우수함을\n 의미합니다 기타 자세한 정보는 www.kidi.or.kr 을 참조해주시길 바랍니다.</string>

    <string name="text_kncap_title">자동차 안전도 평가</string>
    <string name="text_kncap_content">도교통부는 매년 국내에 많이 판매되는 국산차 및 외산차 10여개\n차종을 대상으로 안전도 평가를 실시합니다. 자도차 충돌사항 등을\n통해 차의 안전성을 평가하여, 소비자에게 결과를 제공하고\n제작사로 하여금 보다 안전한 자동차를 제작하도록 유도하기 위해\n1999년 부터 시행해 왔습니다. 최근의 자동차 안전도 평가는 충돌\n안전, 보행자 안전, 사고예방 안전등 3개 분야로 나누어 각 차종의 안전도를 평가합니다.</string>

    <!-- 취득세 문구  -->
    <string name="text_acquisition_title">취득세 안내</string>

    <!-- 툴바 제목 -->
    <string name="toolbar_title_setting">설정</string>
    <string name="toolbar_title_register">회원가입</string>
    <string name="toolbar_title_login">로그인</string>
    <string name="toolbar_title_mypage">마이페이지</string>
    <string name="toolbar_title_edit_info">정보 수정</string>
    <string name="toolbar_title_service_term">이용약관정보</string>

</resources>
