<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/main_notice_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kia_medium"
        android:textSize="15sp"
        android:text="유의 사항"
        android:gravity="left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/main_notice_1_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kia_medium"
        android:textSize="12sp"
        android:text="@string/notice_1"
        android:gravity="left"
        android:layout_marginTop="@dimen/notice_title_marginTop"
        app:layout_constraintTop_toBottomOf="@+id/main_notice_tv"
        app:layout_constraintLeft_toLeftOf="@+id/main_notice_tv" />

    <TextView
        android:id="@+id/main_notice_2_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kia_medium"
        android:textSize="12sp"
        android:text="@string/notice_2"
        android:gravity="left"
        android:layout_marginTop="@dimen/notice_text_marginTop"
        app:layout_constraintTop_toBottomOf="@+id/main_notice_1_tv"
        app:layout_constraintLeft_toLeftOf="@+id/main_notice_1_tv" />

    <TextView
        android:id="@+id/main_notice_3_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kia_medium"
        android:textSize="12sp"
        android:text="@string/notice_3"
        android:gravity="left"
        android:layout_marginTop="@dimen/notice_text_marginTop"
        app:layout_constraintTop_toBottomOf="@+id/main_notice_2_tv"
        app:layout_constraintLeft_toLeftOf="@+id/main_notice_2_tv" />

    <TextView
        android:id="@+id/main_notice_4_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kia_medium"
        android:textSize="12sp"
        android:text="@string/notice_4"
        android:gravity="left"
        android:layout_marginTop="@dimen/notice_text_marginTop"
        app:layout_constraintTop_toBottomOf="@+id/main_notice_3_tv"
        app:layout_constraintLeft_toLeftOf="@+id/main_notice_3_tv" />

    <TextView
        android:id="@+id/main_notice_5_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kia_medium"
        android:textSize="12sp"
        android:text="@string/notice_5"
        android:gravity="left"
        android:layout_marginTop="@dimen/notice_text_marginTop"
        app:layout_constraintTop_toBottomOf="@+id/main_notice_4_tv"
        app:layout_constraintLeft_toLeftOf="@+id/main_notice_4_tv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_layout_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingBottom="90dp"
        android:layout_marginTop="@dimen/rv_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/main_notice_5_tv"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/kia_logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/kia_logo4"
            android:scaleType="fitXY"
            android:layout_marginTop="@dimen/main_bottom_text_marginTop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/bottom_tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kia_medium"
            android:textColor="@color/white"
            android:text="@string/bottom_menu_1"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/main_bottom_text_marginTop"
            app:layout_constraintTop_toBottomOf="@+id/kia_logo_img"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/bottom_tv_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kia_medium"
            android:textColor="@color/white"
            android:text="@string/bottom_menu_2"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/main_bottom_text_marginTop"
            app:layout_constraintTop_toBottomOf="@+id/bottom_tv_1"
            app:layout_constraintLeft_toLeftOf="@+id/bottom_tv_1" />

        <TextView
            android:id="@+id/bottom_tv_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kia_medium"
            android:textColor="@color/white"
            android:text="@string/bottom_menu_3"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/main_bottom_text_marginTop"
            app:layout_constraintTop_toBottomOf="@+id/bottom_tv_2"
            app:layout_constraintLeft_toLeftOf="@+id/bottom_tv_2" />

        <TextView
            android:id="@+id/bottom_tv_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kia_medium"
            android:textColor="@color/white"
            android:text="@string/bottom_menu_4"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/main_bottom_text_marginTop"
            app:layout_constraintTop_toBottomOf="@+id/bottom_tv_3"
            app:layout_constraintLeft_toLeftOf="@+id/bottom_tv_3" />

        <TextView
            android:id="@+id/bottom_tv_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kia_medium"
            android:textColor="@color/white"
            android:text="@string/bottom_menu_5"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/main_bottom_text_marginTop"
            app:layout_constraintTop_toBottomOf="@+id/bottom_tv_4"
            app:layout_constraintLeft_toLeftOf="@+id/bottom_tv_4" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/home_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_home_1"
            android:layout_marginTop="@dimen/img_margin"
            app:layout_constraintTop_toBottomOf="@+id/bottom_tv_5"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/home_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="홈"
            android:fontFamily="@font/kia_medium"
            android:textColor="@color/gray_txt"
            android:layout_marginLeft="@dimen/main_img_margin_right"
            app:layout_constraintLeft_toRightOf="@+id/home_img"
            app:layout_constraintTop_toTopOf="@+id/home_img" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arrow_1_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_arrow_right_1"
            android:layout_marginLeft="@dimen/main_bottom_text_marginRight"
            app:layout_constraintTop_toTopOf="@+id/home_tv"
            app:layout_constraintLeft_toRightOf="@+id/home_tv" />

        <TextView
            android:id="@+id/car_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="차량"
            android:fontFamily="@font/kia_medium"
            android:textColor="@color/gray_txt"
            app:layout_constraintLeft_toRightOf="@+id/arrow_1_img"
            app:layout_constraintTop_toTopOf="@+id/arrow_1_img" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arrow_2_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_arrow_right_1"
            android:layout_marginLeft="@dimen/main_bottom_text_marginRight"
            app:layout_constraintTop_toTopOf="@+id/car_tv"
            app:layout_constraintLeft_toRightOf="@+id/car_tv" />

        <TextView
            android:id="@+id/compare_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="경쟁 모델 비교"
            android:fontFamily="@font/kiabold"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/main_arrow_margin_right"
            app:layout_constraintLeft_toRightOf="@+id/arrow_2_img"
            app:layout_constraintTop_toTopOf="@+id/arrow_2_img" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sns_spinner_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spinner_wrapper_padding"
            android:layout_marginTop="@dimen/rv_margin_top"
            android:background="@drawable/border_top_bottom_black"
            app:layout_constraintTop_toBottomOf="@+id/compare_tv"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/spinner_title_1_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SNS"
                android:fontFamily="@font/kiabold"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="@+id/sns_spinner"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/sns_spinner"/>

            <Spinner
                android:id="@+id/sns_spinner"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:background="@drawable/bottom_spinner_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sns_spinner_constraint_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spinner_wrapper_padding"
            android:background="@drawable/border_bottom_black"
            app:layout_constraintTop_toBottomOf="@+id/sns_spinner_constraint"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/spinner_title_2_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Family Site"
                android:fontFamily="@font/kiabold"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="@+id/familySite_spinner"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/familySite_spinner" />

            <Spinner
                android:id="@+id/familySite_spinner"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:background="@drawable/bottom_spinner_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/personal_info_manuel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_manuel"
            android:fontFamily="@font/kialight"
            android:textColor="@color/bottom_link_txt"
            android:layout_marginTop="@dimen/bottom_text_Margintop"
            app:layout_constraintTop_toBottomOf="@+id/sns_spinner_constraint_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/privacy_tv" />

        <TextView
            android:id="@+id/privacy_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kialight"
            android:text="@string/privacy_center"
            android:textColor="@color/bottom_link_txt"
            app:layout_constraintLeft_toRightOf="@+id/personal_info_manuel_tv"
            app:layout_constraintTop_toTopOf="@+id/personal_info_manuel_tv"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/trial_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trial"
            android:fontFamily="@font/kialight"
            android:textColor="@color/bottom_link_txt"
            android:layout_marginTop="@dimen/bottom_text_Margintop"
            app:layout_constraintTop_toBottomOf="@+id/privacy_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/audit_tv"/>

        <TextView
            android:id="@+id/audit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cyber_audit"
            android:fontFamily="@font/kialight"
            android:textColor="@color/bottom_link_txt"
            app:layout_constraintTop_toTopOf="@+id/trial_tv"
            app:layout_constraintLeft_toRightOf="@+id/trial_tv"
            app:layout_constraintRight_toLeftOf="@+id/e_annoucement_tv"/>

        <TextView
            android:id="@+id/e_annoucement_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_annoucement"
            android:fontFamily="@font/kialight"
            android:textColor="@color/bottom_link_txt"
            app:layout_constraintTop_toTopOf="@+id/trial_tv"
            app:layout_constraintLeft_toRightOf="@+id/audit_tv"
            app:layout_constraintRight_toLeftOf="@+id/site_map"/>

        <TextView
            android:id="@+id/site_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site_map"
            android:fontFamily="@font/kialight"
            android:textColor="@color/bottom_link_txt"
            app:layout_constraintTop_toTopOf="@+id/trial_tv"
            app:layout_constraintLeft_toRightOf="@+id/e_annoucement_tv"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>