<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/tvServiceTermTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_service_term_title_1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_term_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:padding="16dp"
            android:text="@string/text_service_term_1"
            app:layout_constraintTop_toBottomOf="@+id/tvServiceTermTitle"
            app:layout_constraintLeft_toLeftOf="@+id/tvServiceTermTitle"
            app:layout_constraintRight_toRightOf="@+id/tvServiceTermTitle" />

        <TextView
            android:id="@+id/tv_term_content_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/text_service_term_2"
            app:layout_constraintTop_toBottomOf="@+id/tv_term_content"
            app:layout_constraintLeft_toLeftOf="@+id/tv_term_content"
            app:layout_constraintRight_toRightOf="@+id/tv_term_content" />

        <TextView
            android:id="@+id/tv_term_content_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/text_service_term_3"
            app:layout_constraintTop_toBottomOf="@+id/tv_term_content_2"
            app:layout_constraintLeft_toLeftOf="@+id/tv_term_content_2"
            app:layout_constraintRight_toRightOf="@+id/tv_term_content_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/agree_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="동의"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@color/transparent"
            android:padding="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_term_content_3"
            app:layout_constraintLeft_toLeftOf="@+id/tv_term_content_3"
            app:layout_constraintRight_toRightOf="@+id/tv_term_content_3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>