<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="280dp">

    <Space
        android:id="@+id/spaceStart"
        android:layout_width="24dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_check_permissions_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toTopOf="@id/glTop" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_txt"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Space
        android:layout_width="24dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noti_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_permission_noti_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <TextView
        android:id="@+id/noti_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_permission_noti_description"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/noti_title" />

    <TextView
        android:id="@+id/storage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_permission_noti_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/noti_content" />

    <TextView
        android:id="@+id/storage_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_permission_noti_description"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/storage_title" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray_txt"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/storage_content" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_permission_overall_description"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/view2" />




    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray_txt"
        app:layout_constraintEnd_toEndOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


    <Button
        android:id="@+id/btnConfirm"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:backgroundTint="@color/white"
        android:text="@string/text_confirm"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

</androidx.constraintlayout.widget.ConstraintLayout>